# gotenberg_pdf

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: blocking_client.rs  blocking_tests.rs  client.rs  health.rs  lib.rs  page_range.rs  paper_format.rs  streaming_client.rs  streaming_tests.rs  test_helper.rs  tests.rs  wasm_tests.rs
test_files/: example.docx  example_password_protected.odt
