[package]
name = "gotenberg_pdf"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A Rust client for the Gotenberg PDF API"

[dependencies]
reqwest = { version = "0.13", features = [
    "multipart",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
serde_json = "1.0"
zeroize = { version = "1.8", optional = true }

[features]
default = ["auth"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
http2 = ["reqwest/http2"]
auth = ["zeroize"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
