[package]
name = "gotenberg_pdf"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A Rust client for the Gotenberg PDF API"
keywords = ["gotenberg", "pdf", "chromium", "libreoffice"]

[dependencies]
reqwest = { version = "0.12", features = [
    "multipart",
    "http2",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
serde_json = "1.0"
zeroize = { version = "1.8", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["zeroize"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
stream = ["reqwest/stream", "futures"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
